# ai-financial-os

./: .env.example  .gitignore  README.md  docker-compose.yml
api/: .dockerignore  Dockerfile  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_initial_schema.py  0002_ingestion_breadth_and_enhancements.py  0003_ai_agent_system.py  0004_rag_knowledge_base.py  0005_domain_event_user_id.py  0006_goals.py  0007_budget_targets.py  0008_refresh_tokens.py  0009_user_role.py  (+1 more)
api/app/: main.py
api/app/analytics/: common.py  (+2 more)
api/tests/: conftest.py  test_accounts.py  test_admin.py  test_ai_audit_log_immutability.py  test_ai_router.py  test_analytics_anomaly_detection.py  test_analytics_burn_rate.py  test_analytics_cash_flow.py  test_analytics_debt_payoff.py  test_analytics_emergency_fund.py  test_analytics_engine.py  test_analytics_expense_trends.py  test_analytics_forecast.py  test_analytics_ratios.py  test_analytics_retirement_contributions.py  test_analytics_savings_rate.py  test_analytics_subscriptions.py  test_analytics_taxable_events.py  test_audit_log_immutability.py  test_auth.py  test_budget.py  test_config_secrets_guard.py  test_connector_stubs.py  test_csv_import.py  test_encryption.py  test_event_bus.py  test_events.py  test_financial_advisor_agent.py  test_goals.py  test_merchant_category_resolution.py  test_migrations.py  test_net_worth.py  test_new_agents_wiring.py  test_normalization_engine.py  test_ofx_import.py  test_plaid_connector.py  test_plaid_link_router.py  test_plaid_real_client.py  test_plaid_webhook.py  test_rag_chunker.py  (+9 more)
(+226 files in other folders)
